Bug 152152 - Artistic effects problem in Word after saving in Writer
Summary: Artistic effects problem in Word after saving in Writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-21 09:33 UTC by NISZ LibreOffice Team
Modified: 2022-11-30 10:06 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample file (31.19 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-21 09:33 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (287.84 KB, image/png)
2022-11-21 09:35 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-21 09:33:08 UTC
Description:
After saving it in writer and reopening it in Word, the artistic effects panel will show the artistic effects of the second image instead of the first.

Steps to Reproduce:
1. Open the attached file in writer.
2. Save as the file.
3. Reopen the saved file in Word.
4. Click on the first picture.
5. Right-click on the mouse button to the first picture.
6. Click on the Picture Format tab and select Artistic Effects.

Actual Results:
The panel will show the artistic effects of the second image instead of the first.

Expected Results:
The panel should show the artistic effects of the first image.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d687d74a4e3ba70a4e21fcd7db532c3cffc7d4d2
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-21 09:33:58 UTC
Created attachment 183691 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2022-11-21 09:35:23 UTC
Created attachment 183692 [details]
Screenshot of the problem
Comment 3 Commit Notification 2022-11-29 16:38:27 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/01246f06cfeeb6a1070e82351e2559def4f5d820

tdf#152152 DOCX export: fix lost WDP images in artistic effects

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-11-30 07:57:18 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bfe33d42a2381bce194cc6fe15b830902f7c8443
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 5 Commit Notification 2022-11-30 10:06:25 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/08489a539c10963b0b735740f658de2159638adc

tdf#152152 DOCX export: fix lost WDP images in artistic effects

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.