tdf#152152 DOCX export: fix lost WDP images in artistic effects

Handling of WDP image counter was incorrect if the
document contains embedded documents, overwriting
WDP images with the other ones.

See also commit 55b1d635350cb76ee3e19e90c938eedd38ac3342
"tdf#152153 DOCX export: fix lost images at embedded documents"
and commit cf2dc247ff5f726238856e9b46a4926a30430e14
"DOCX export: image deduplication and clean up"
and commit b5f6a5cfc517ecd8aa6ba96471d854b07b92ebaa
"ooxml: Do not repeat wdp files in artistic effects".

Change-Id: Ia26784519f6d514ee8c90c7a91a367feeba140b5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143235
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>